Make Plugin Text into Snippet

--- a/src/Resources/views/storefront/element/cms-element-maps-cookie.html.twig
+++ b/src/Resources/views/storefront/element/cms-element-maps-cookie.html.twig
@@ -17,7 +17,7 @@
             {% endif %}
             <div class="maps-overlay">
                 <button class="btn btn-light"
-                        data-map-load>{{ "maps.cookie.allowMaps" }}</button>
+                        data-map-load>{{ "maps.cookie.allowMaps"|trans|sw_sanitize }}</button>
             </div>
         </div>
     </div>
